# neocrypt

./: .gitignore  Cargo.toml  LICENSE  README.md  README.txt
dummy_data/documents/: t.txt
src/: common.rs  crypter.rs  hashing.rs  lib.rs  streaming.rs
