[package]
name = "bastion-mount"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = "0.5.2"
argon2 = "0.5.3"
base64 = "0.22.0"
bitvec = "1.0.1"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
cipher = "0.4.4"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
dirs = "5.0.1"
fern = { version = "0.7.0", features = ["colored"] }
flate2 = "1.0.34"
humantime = "2.1.0"
itertools = "0.12.1"
jwalk = "0.8.1"
log = "0.4.22"
lz4_flex = "0.11.3"
md5 = "0.7.0"
num_cpus = "1.16.0"
password-hash = "0.5.0"
pathdiff = "0.2.1"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
rayon = "1.9.0"
rsa = "0.9.6"
scrypt = "0.11.0"
sha3 = "0.10.8"
sys-mount = "3.0.1"
tar = "0.4.40"
